<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <!-- Without accessibilityTraversalAfter, FAB always appears last in reading order. -->
    <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/fab_compose_message"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    -->

    <!-- With accessibilityTraversalAfter, FAB appears after the heading, ...
         BUT if the page has enough text to scroll, the FAB may not appear in
         TalkBack's linear reading order at all. It can be found with Explore
         by Touch. -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_content_description"
        android:accessibilityTraversalAfter="@+id/textview_first"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_first_fragment"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:accessibilityHeading="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_1"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_first" />

            <TextView
                android:id="@+id/textview_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_2"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_2" />


            <TextView
                android:id="@+id/textview_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_3a"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_3" />
            <!--
                        <TextView
                            android:id="@+id/textview_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/greeking_1"
                            android:textSize="16sp"
                            android:layout_marginTop="16dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textview_4" />
            -->
            <Button
                android:id="@+id/button_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>